--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="dashboard-show">
+
+<header class="page-header">
+<h1>My Dashboard</h1>
+</header>
+
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Total Number of Products</th>
+      <th>Total Number of Categories</th>
+    </tr>
+  </thead>
+  <tbody>
+    <td>
+      <%= @product_count %>
+    </td>
+    <td>
+      <%= @category_count %>
+    </td>
+  </tbody>
+</table>
